refactored db and article controller

--- a/client/app/feed/feed.html
+++ b/client/app/feed/feed.html
@@ -14,4 +14,8 @@
             </section>
         </div>
     </div>
+    <div class="row">
+        {{articles}}
+        <button ng-click="getArticlesForUser()"></button>
+    </div>
 </div>
