--- a/client/index.html
+++ b/client/index.html
@@ -19,9 +19,10 @@
   <script type="text/javascript" src="lib/underscore/underscore-min.js"></script>
   <script type="text/javascript" src="lib/angular/angular.min.js"></script>
   <script type="text/javascript" src="lib/angular-route/angular-route.min.js"></script>
-  <script type="text/javascript" src="app/feed/feed.js"></script>
   <script type="text/javascript" src="app/services/services.js"></script>
+  <script type="text/javascript" src="app/feed/testData.js"></script>
   <script type="text/javascript" src="app/user/user.js"></script>
+  <script type="text/javascript" src="app/newUserPage/newUserPage.js"></script>
   <script type="text/javascript" src="app/app.js"></script>
 
 </html>
