general style changes

--- a/client/app/newUserPage/newUserPage.html
+++ b/client/app/newUserPage/newUserPage.html
@@ -1,5 +1,4 @@
 <div ng-controller="FeedController" id="sidebar">
-
   <div id="mainBrandingContainer">
     <?xml version="1.0" encoding="utf-8"?>
     <svg class="dartfeedLogo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-3093 654.6 412 328.8" style="enable-background:new -3093 654.6 412 328.8;" xml:space="preserve">
@@ -62,6 +61,8 @@
       <p>sign out</p>
     </div>
   </div>
+
+  <span id="sidebarColorShading"></span>
 </div>
 
 <!-- how is this working without being nested in a controller? -->
