general style changes

--- a/client/index.html
+++ b/client/index.html
@@ -4,17 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>DartFeed | Tech Made Easy</title>
-
     <link href="styles/style.css" rel="stylesheet">
-
+    <script type="text/javascript" src="vendor/skrollr.min.js"></script>
   </head>
-
   <body>
-  
-  <div ng-view></div>
-
+    <div ng-view></div>
   </body>
   <script type="text/javascript" src="lib/underscore/underscore-min.js"></script>
   <script type="text/javascript" src="lib/angular/angular.min.js"></script>
@@ -24,5 +19,4 @@
   <script type="text/javascript" src="app/user/user.js"></script>
   <script type="text/javascript" src="app/newUserPage/newUserPage.js"></script>
   <script type="text/javascript" src="app/app.js"></script>
-
 </html>
