--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
 
     <title>DartFeed | Tech Made Easy</title>
 
-    <link href="styles/style.css" rel="stylesheet">
+    <link href="dist/style.min.css" rel="stylesheet">
 
   </head>
 
@@ -16,13 +16,6 @@
   <div ng-view></div>
 
   </body>
-  <script type="text/javascript" src="lib/underscore/underscore-min.js"></script>
-  <script type="text/javascript" src="lib/angular/angular.min.js"></script>
-  <script type="text/javascript" src="lib/angular-route/angular-route.min.js"></script>
-  <script type="text/javascript" src="app/services/services.js"></script>
-  <script type="text/javascript" src="app/feed/testData.js"></script>
-  <script type="text/javascript" src="app/user/user.js"></script>
-  <script type="text/javascript" src="app/newUserPage/newUserPage.js"></script>
-  <script type="text/javascript" src="app/app.js"></script>
+  <script type="text/javascript" src="dist/script.js"></script>
 
 </html>
