Deleted old legacy files.  Lots of styling.

--- a/client/app/feed/landingPage.html
+++ b/client/app/feed/landingPage.html
@@ -1,4 +1,4 @@
-<div ng-controller="landingController" class="container landingHeader" ng-init="getArticlesForUser()">
+<div class="container landingHeader">
     <div class="row">
 
         <div class="col-md-3 col-md-offset-1">
