--- a/client/app/newUserPage/newUserPage.html
+++ b/client/app/newUserPage/newUserPage.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-controller="FeedController">
   <div id="sidebar">
     <div id="mainBrandingContainer">
       <?xml version="1.0" encoding="utf-8"?>
