--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DartFeed | Tech Made Easy</title>
+    <title>DartFeed | Articles Just For You</title>
     <link href="styles/style.css" rel="stylesheet">
     <script type="text/javascript" src="vendor/skrollr.min.js"></script>
   </head>
