--- a/client/app/newUserPage/newUserPage.html
+++ b/client/app/newUserPage/newUserPage.html
@@ -1,5 +1,6 @@
 <div ng-controller="FeedController">
   <div id="sidebar">
+
     <div id="mainBrandingContainer">
       <?xml version="1.0" encoding="utf-8"?>
       <svg class="dartfeedLogo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-3093 654.6 412 328.8" style="enable-background:new -3093 654.6 412 328.8;" xml:space="preserve">
@@ -17,11 +18,12 @@
     </div>
 
     <div id="categoryListContainer">
+
       <h3>Following:</h3>
       <ul class="categoriesList">
-        <li ng-repeat="category in userCategories track by $index">
+        <li ng-repeat="category in userCategories track by $index" ng-click="removeCategory($index)">
           {{ category }}
-          <span class="delete" ng-click="removeCategory($index)">
+          <span class="delete">
             <?xml version="1.0" encoding="utf-8"?>
             <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
             <svg class="minus" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-3093 613 412 412" style="enable-background:new -3093 613 412 412;" xml:space="preserve">
@@ -35,11 +37,12 @@
           </span>
         </li>
       </ul>
+
       <h3>Add Categories:</h3>
       <ul class="categoriesToAdd">
-        <li ng-repeat="category in allCategories | filter: categoryFilter">
+        <li ng-repeat="category in allCategories | filter: categoryFilter" ng-click="addCategory(category)">
           {{ category }}
-          <span class="addCategory" ng-click="addCategory(category)">
+          <span class="addCategory">
             <?xml version="1.0" encoding="utf-8"?>
             <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
             <svg class="plus" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-3093 613 412 412" style="enable-background:new -3093 613 412 412;" xml:space="preserve">
@@ -53,6 +56,7 @@
           </span>
         </li>
       </ul>
+
     </div>
 
     <div class="userInfo">
@@ -64,7 +68,7 @@
     </div>
 
     <span id="sidebarColorShading"></span>
-  </div>
+  </div> <!-- end of sidebar container --->
 
   <div id="articlesContainer" data-100-start="opacity: .3">
     <div class="article" ng-repeat="obj in articles">
