--- a/client/app/newUserPage/newUserPage.html
+++ b/client/app/newUserPage/newUserPage.html
@@ -74,7 +74,9 @@
     <div class="article" ng-repeat="obj in articles">
       <div class="scoreStrip" ng-style="obj.yellowShade"></div>
       <a href="{{ obj.linkURL }}" target="_blank">
-        <figure ng-style="{'background': 'url({{ obj.imgURL }})', 'background-size': 'cover', 'background-position': 'center center'}"></figure>
+        <figure>
+          <span class="thumbnail" ng-style="{'background': 'url({{ obj.imgURL }})', 'background-size': 'cover', 'background-position': 'center center'}"></span>
+        </figure>
       </a>
       <div class="likeButton" ng-click="obj.userLikes = true; likeArticle($index);">
         <div ng-show="!obj.userLikes">
