Fixed comment in newUserPage.html

--- a/client/app/newUserPage/newUserPage.html
+++ b/client/app/newUserPage/newUserPage.html
@@ -67,7 +67,7 @@
   </div>
 
   <span id="sidebarColorShading"></span>
-</div> <!-- end of sidebar container --->
+</div> <!-- end of sidebar container -->
 
 <div id="articlesContainer" data-100-start="opacity: .3">
   <div class="article" ng-repeat="obj in articles">
