Landing page and graphics.

--- a/client/app/newUserPage/newUserPage.html
+++ b/client/app/newUserPage/newUserPage.html
@@ -62,7 +62,7 @@
     <img class="profilePic" ng-src="{{picUrl}}" alt=""/>
     <div class="userSettings">
       <p class="name">{{name}}</p>
-      <a href='/api/auth/signout'><p>sign out</a>
+      <a href='/api/auth/signout'><p>sign out</p></a>
     </div>
   </div>
 
