--- a/client/app/feed/landingPage.html
+++ b/client/app/feed/landingPage.html
@@ -1,16 +1,32 @@
-<div class="container landingHeader">
-    <div class="row">
-        <div class="col-md-3 col-md-offset-1">
-            <img src="../iconmonstr-target-3-icon-256.png" alt="">
-        </div>
-        <div class="col-md-3">
-            <section class="jumbotron text-center">
-                <h1 class="jumbotron-heading">Dart Feed</h1>
-                <p class="lead text-muted">Targeted Tech News</p>
-                <p>
-                    <a href="/api/auth/facebook" class="btn btn-primary">Sign In with Facebook!</a><br>
-                </p>
-            </section>
-        </div>
-    </div>
+<div id="landingPageBackground">
+  <div id="logosContainer">
+    <div id="nprLogo" class="logoFloat1"></div>
+    <div id="espnLogo" class="logoFloat2"></div>
+    <div id="avClubLogo" class="logoFloat1"></div>
+    <div id="techCrunchLogo" class="logoFloat2"></div>
+    <div id="nytLogo" class="logoFloat2"></div>
+    <div id="bbcLogo" class="logoFloat1"></div>
+    <div id="voxLogo" class="logoFloat2"></div>
+  </div>
+  <div class="contentContainer">
+    <?xml version="1.0" encoding="utf-8"?>
+    <svg id="landingLogo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-3093 654.6 412 328.8" style="enable-background:new -3093 654.6 412 328.8;" xml:space="preserve">
+      <path id="target-3-icon" d="M-2861.4,826.7l31.9-17.9c6,58.9-40.2,109.8-99.1,109.8c-55,0-99.6-44.6-99.6-99.6
+        c0-55,44.6-99.6,99.6-99.6c22.2,0,42.7,7.2,59.2,19.5l-32.2,18.1c-8.3-3.6-17.4-5.6-27-5.6c-37.3,0-67.7,30.4-67.7,67.7
+        c0,37.3,30.4,67.7,67.7,67.7C-2893.9,886.7-2865.2,860.4-2861.4,826.7z M-2798.9,792c8.9,43.1-3.7,88.3-36.1,120.7
+        c-25,25-58.3,38.8-93.7,38.8c-35.4,0-68.7-13.8-93.7-38.8c-25-25-38.8-58.3-38.8-93.7c0-35.4,13.8-68.6,38.8-93.7
+        s58.3-38.8,93.7-38.8c33.6,0,65.2,12.4,89.7,35c9-6.1,16.2-14.5,20.7-24.3c-29.2-26.5-67.9-42.6-110.4-42.6
+        c-90.8,0-164.4,73.6-164.4,164.4c0,90.8,73.6,164.4,164.4,164.4c103.1,0,181.3-94.2,161.3-196.2
+        C-2778.4,785.9-2789.2,787.7-2798.9,792z M-2731,708.4l13.3-51.4l-74.1,41.6c-6.6,20.2-20.5,37-38.9,47.3l-77.5,43.4
+        c-5.8-4.1-12.8-6.5-20.4-6.5c-19.4,0-35.1,15.7-35.1,35.1c0,19.4,15.7,35.1,35.1,35.1c19.8,0,36-16.5,35.1-36.8l77.7-43.5
+        c18.4-10.3,40.1-13.4,60.6-8.5l74.2-41.6L-2731,708.4z"></path>
+    </svg>
+    <h1>dartfeed</h1>
+    <p id="tagline">Articles On-Target.</p>
+    <a href="/api/auth/facebook"><div id="fbLogin"></div></a>
+  </div>
+  <div class="monkeyLearnContainer">
+    <span id="poweredBy">powered by:</span>
+    <img src="../../styles/images/monkeylearnlogo.png" alt="MonkeyLearnLogo" width="130px"/>
+  </div>
 </div>
