--- a/client/app/feed/landingPage.html
+++ b/client/app/feed/landingPage.html
@@ -25,8 +25,10 @@
     <p id="tagline">Articles On-Target.</p>
     <a href="/api/auth/facebook"><div id="fbLogin"></div></a>
   </div>
-  <div class="monkeyLearnContainer">
-    <span id="poweredBy">powered by:</span>
-    <img src="../../styles/images/monkeylearnlogo.png" alt="MonkeyLearnLogo" width="130px"/>
-  </div>
+  <a href="http://monkeylearn.com/" target="_blank">
+    <div class="monkeyLearnContainer">
+      <span id="poweredBy">powered by:</span>
+      <img src="../../styles/images/monkeylearnlogo.png" alt="MonkeyLearnLogo" width="130px"/>
+    </div>
+  </a>
 </div>
